add - 테스트 환경 설정